Feat: Study JPA, JPQL, querySql

--- a/jpa-practices/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/04.JpaBoardRepository.md
+++ b/jpa-practices/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/04.JpaBoardRepository.md
@@ -31,7 +31,7 @@
     2) ex02.repository.JpaBoardRepository
 
        ```java
-       public interface JpaBoardRepository extends JpaRepository<Board, Long> {
+       public interface JpaBoardRepository extends JpaRepository<Board, Integer> {
        
        }
        
@@ -80,113 +80,130 @@
           ```
 
 3. 통합하기
-    - JPA Repository를 상속한 인테페이스에 정의한 QueryDSL 인터페이를 상속하면 통합은 끝이다.
-    - 예제: ex02.repository.JpaBoardRepository
-   
-      ```java
-      
-       public interface JpaBoardRepository extends JpaRepository<Board, Long>, QuerydslBoardRepository {
+    1) JPA Repository를 상속한 인테페이스에 정의한 QueryDSL 인터페이를 상속하면 통합은 끝이다.
+    2) 예제: ex02.repository.JpaBoardRepository
+
+       ```java
        
-       }
-      
-      ```
-    
+        public interface JpaBoardRepository extends JpaRepository<Board, Integer>, QuerydslBoardRepository {
+        
+        }
+       
+       ```
+
 4. 전체 클래스 다이어그램은 다음과 같다.
 
    ![32004.png](../_resources/32004.png)
 
-
-#### 1. 테스트: testSave()
+#### 테스트 01: testSave
 
 1. 기본 메소드 CrudRepository.save(s)
-2. 주의: CrudRepository.save(s)에 대한 오해
+2. CrudRepository.save(s)에 대한 오해
 
+   ![32005.png](../_resources/32005.png)
 
-#### 2. findById01(id)
+    1) insert만 하는 메소드가 아니다. update도 한다.
+    2) insert가 되면 파라미터로 전달받은 객체는 영속화가 된다.
+    3) update에서는 파라미터로 전달받은 객체는 값만 복사하는데 사용되기 때문에 영속화가 되지 않는다.
+    4) save() 메소드 호출 후, 영속객체를 사용해야 하면 반환되는 객체를 사용하여야 한다. 반환되는 객체는 영속화를 보장한다.
 
-1. 한 개의 영속화 객체를 조회한다.
-2. @ManyToOne의 기본 fetch mode는 Eager Fetch(FecthType.EAGER)이기 때문에 매핑 필드 user 필드에 실제 User 객체가 세팅된다.
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindById01
+#### 테스트 02: testFindById
 
-#### 3. findById02(id)
+1. 기본 메소드 CrudRepository.findById()
+2. Outer Join
+3. JPA에서는 left outer join만 지원한다.
+4. JPQL 사용하는 것은 TestJpqlRepository 에서 확인 한 것 처럼 Select 쿼리가 2번 실행하기 때문에 기본 메소드 CrudRepository.findById()를 사용한다.
+5. Left Outer Join 쿼리 로그 확인해 볼 것.
 
-1. findById01과 마찬가지로 id로 엔티티 객체 한 개를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), where(), fetchOne() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindById02
+#### 테스트 03: testFindById02
 
-#### 4. findAll01()
+1. repository.querdsl.QuerydslBoardRepository.findById02(no)
+2. 기본 메소드 CrudRepository.findById()는 join은 되지만 Projection이 이슈가 되면 사용하지 못한다.
+3. QueryDSL Projection으로 해결
+4. (Inner) Join을 사용한다.
+5. Projection에서는 setter를 사용하는 Projections.fields()를 사용
+6. Projection 타겟 객체는 BoardDto 이다.
 
-1. JPQL를 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), orderBy(), Q클래스 desc(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll01
+#### 테스트 04: testFindAllByOrderByRegDateDesc
 
-#### 5. findAll02()
+1. 쿼리 메소드 JpaBoardRepository.findAllByOrderByRegDateDesc()
+2. 쿼리 로그를 보면, join을 하지 않는 것을 확인할 수 있다.
+3. @ManyToOne fetch의 기본은 EAGER이기 때문에 각각의 Board가 참조하고 있는 User의 정보를 얻어오기 위해 select가 여러번 실행된다.
+4. User가 영속객체이기 때문에 1차 캐시가 되면(중복되는 게시물 작성자) User를 가져오기 위해 게시물 전체에 대한 select User는 하지 않을 것이다.
+5. 성능이슈: 대용량 게시판에선 문제가 될 수 있다.
 
-1. Inner Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), orderBy(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll02
+#### 테스트 05: testFindAllByOrderByRegDateDesc02
 
-#### 6. findAll03()
+1. repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc02()
+2. testFindAllByOrderByRegDateDesc의 JpaBoardRepository.findAllByOrderByRegDateDesc()의 문제를 해결한다.
+3. QueryDSL Fetch Join을 사용
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), orderBy(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll03
+#### 테스트 06: testFindAllByOrderByRegDateDesc03
 
-#### 7. findAll03(page, size)
+1. repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc03()
+2. repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc02 에 Projection 기능을 추가
+3. QueryDSL Inner Join을 사용
+4. Projections.fields()를 통해 setter를 활용한다.
+5. 주의할 것은 Projection을 사용하면 fetch join이 대상 엔티티는 별칭을 가질 수 없기 때문에 fetch join을 사용할 수 없다.
+6. Projection 이슈에서는 Inner Join만 가능하다.
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), orderBy(), offset(), limit(), fetch() 사용
-3. Pagination을 위해 offset(), limit() 사용: page index 시작은 0
-4. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindAll03Pagination
+#### 테스트 07: testFindAllByOrderByRegDateDesc03Pagination
 
-#### 8. findAll03(keyword, page, size)
+1. repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc03(page, size)
+2. repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc3()에 Paging 기능을 오버로딩 하였다.
+3. QueryDSL의 offset(), limit()를 사용: page index는 0부터 시작
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), where(), orderBy(), offset(), limit(), fetch() 사용
-3. like 검색 적용: Q클래스 contains() 사용
-4. Pagination을 위해 offset(), limit() 사용: page index 시작은 0
-5. 테스트: ex02.repository.TestJpqlBoardRepository.testFindAll03PaginationAndLikeSearch
+#### 테스트 08: testFindAll02Pagination
 
-#### 9. update01(Board)
+1. repository.querdsl.QuerydslBoardRepository.findAll02(pageable)
+2. 기능과 만들어지는 쿼리는 repository.querdsl.QuerydslBoardRepository.findAllByOrderByRegDateDesc03(page, size)와 동일
+3. 차이점은 Paging과 Sorting을 위해 Pageable 인터페이스 구현체를 파라미터로 받아 QueryDSL에 적용하고 있다.
+4. OrderBy 필드를 외부에서 지정할 수 있는 장점이 있다.
+5. page index는 0 부터 시작
 
-1. 영속객체를 사용한 Update
-2. 테스트: ex02.repository.TestQuerydslBoardRepository.testUpdate01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 업데이트이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) 선별적 컬럼 업데이트처럼 보이지만 영속객체를 사용하기 때문에 전체 속성이 업데이트 된다.(문제는 없다.)
-    3) select와 update 쿼리가 2개 실행된다.
+#### 테스트 09: testFindAll02PaginationAndLikeSearching
 
-#### 10. update02(Board)
+1. repository.querdsl.QuerydslBoardRepository.findAll02(keyword, pageable)는 Like검색을 위한 keyword를 추가하였다.
 
-1. JPQL를 직접 사용한 Update
-2. QueryDSL 쿼리 메소드: update(), set(), where(), execute() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testUpdate02
+#### 테스트 10: testUpdate01
 
-#### 11. delete01(id)
+1. 특별난 메소드를 사용하지 않는다.
+2. 영속객체를 사용한다.
+3. 선별적 컬럼 업데이트이지만 영속객체를 사용하기 때문에 전체 속성이 업데이트 된다.
+4. select와 update 실행
 
-1. 영속객체를 사용한 Delete
-2. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 삭제이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) select와 delete 쿼리가 2개 실행된다.
+#### 테스트 11: testUpdate02
 
-#### 12. delete02(id)
+1. repository.querdsl.update(Board)
+2. update 쿼리만 실행한다.
+3. 선별적 컬럼 업데이트가 가능하다.
 
-1. JPQL를 직접 사용한 Delete
-2. QueryDSL 쿼리 메소드: delete(), where(), execute() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete02
+#### 테스트 12: testDelete01
 
-#### 13. delete02(id, userId)
+1. 기본 메소드 CrudRepository.delete(board)
+2. 영속객체를 사용한다.
+3. select와 delete 실행
 
-1. JPQL를 직접 사용한 Delete
-2. QueryDSL 쿼리 메소드: delete(), where(), execute() 사용
-3. 게시판 삭제 비즈니스 로직에 맞게 작성된 Delete 메소드
-4. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete02ByIdAndUserId
+#### 테스트 13: testDelete02
 
-#### 14. count()
+1. 본 메소드 CrudRepository.deleteById(id)
+2. 영속객체를 사용한다.
+3. select와 delete 실행
+4. testDelete01의 CrudRepository.delete(board)와 동작은 완전 동일하다.
 
-1. QueryDSL의 fetchCount() 메소드 사용 
+#### 테스트 14: testDelete03
 
+1. repository.querdsl.QuerydslBoardRepository.delete(id)
+2. QueryDSL로 구현된 메소드다.
+3. delete 쿼리만 실행된다.
 
+#### 테스트 15: testDelete04
 
+1. repository.querdsl.QuerydslBoardRepository.delete(id, userId)
+2. QueryDSL로 구현된 메소드다.
+3. delete 쿼리만 실행된다.
+4. 게시판 삭제 비즈니스 로직에 맞게 작성된 메소드이다.
 
+#### 메소드: JpaBoardRepository.count()
+
+1. 기본 메소드 CrudRepository.count()
